--- a/M3/.classpath
+++ b/M3/.classpath
@@ -6,7 +6,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/home/super/Baixades/ojdbc8.jar">
+	<classpathentry kind="lib" path="C:/Users/jhurt/Downloads/ojdbc8.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
